force-app/main/default/objects/Risk_Management__c/Risk_Management__c.object-meta.xml
<CustomObject>
    <description>Partially implemented risk management for programs object</description>
    <label>Risk Management</label>
    <nameField>
        <displayFormat>ERM{00000}</displayFormat>
        <label>Risk Management</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>