force-app/main/default/objects/Risk_Management__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Risk Management</relationshipLabel>
    <relationshipName>Risk_Management</relationshipName>
    <type>Lookup</type>
</CustomField>