force-app/main/default/objects/Risk_Management__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <label>Mitigation</label>
    <type>TextArea</type>
</CustomField>