force-app/main/default/objects/Risk_Management__c/fields/Risk_Issue__c.field-meta.xml
<CustomField>
    <fullName>Risk_Issue__c</fullName>
    <label>Risk Issue</label>
    <type>TextArea</type>
</CustomField>